# junior_web_app_contabilita

./: .gitignore
backend/: db.sqlite3  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/core/management/commands/: init_conti.py
backend/core/migrations/: 0001_initial.py  0002_remove_esercizio_data_fine_and_more.py  0003_remove_mastrino_saldo_avere_and_more.py  0004_alter_esercizio_options_alter_mastrino_options_and_more.py
frontend/: index.html  package-lock.json  package.json  test.txt  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  ProtectedRoute.tsx  api.ts
frontend/src/components/esercizi/: AddEsercizioButton.tsx  AddEsercizioDialog.tsx  EserciziList.tsx  ScrittureTable.tsx
frontend/src/components/export/: ExportMastriniPdf.tsx  ExportScritturePdf.tsx
frontend/src/components/layout/: DeleteDialogEsercizio.tsx  EditDialogEsercizio.tsx  GridBackGround.tsx  Header.tsx  PrivateLayout.tsx  Sidebar.tsx  layout.constants.ts
frontend/src/components/mastrini/: MastriniTable.tsx
frontend/src/components/scritture/: ScritturaEditDialog.tsx  ScritturaForm.tsx
frontend/src/hooks/: README.txt  useContabilita.tsx
frontend/src/pages/: Dashboard.tsx  Hompage.tsx  StudentDetail.tsx  TeacherDashboard.tsx
frontend/src/pages/auth/: Login.tsx  (+4 more)
frontend/src/types/: index.ts
frontend/src/utils/: authUtils.tsx
(+29 files in other folders)
